# digital_assets_portfolio

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  analyze_portfolio_example.py  create_init_files.py  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_application.py  test_simple.py
config/: logging.py  settings.py  storage_config.py
docs/: architecture.md  setup.md
scripts/: debug_metrics.py  debug_portfolio_structure.py  diagnostic_check.py  diagnostic_script.py  fetch_historical_coingecko.py  quick_start.py
src/: config.py
src/application/: startup.py
src/application/services/: metrics_calculator.py  portfolio_service.py  portfolio_snapshot_service.py  price_service.py  transaction_processor.py
src/application/use_cases/: calculate_metrics.py  generate_report.py  load_transactions.py  portfolio_display.py  portfolio_initialization.py  price_update.py
src/core/entities/: asset.py  portfolio.py  position.py  transaction.py
src/core/interfaces/: data_source.py  repository.py
src/core/value_objects/: money.py  percentage.py  time_period.py
src/infrastructure/cache/: price_cache.py
src/infrastructure/data_sources/: api_client.py  excel_loader.py  exchange_specific_clients.py  historical_price_fetcher.py  price_fetcher.py  unified_csv_loader.py  unified_data_source.py
src/presentation/cli/: commands.py
src/shared/: __init__.py  constants.py  validators.py
tests/: test_basic_functionality.py
tests/fixtures/: sample_data.py
tests/integration/: test_portfolio_flow.py
(+19 files in other folders)
