[tool.poetry]
name = "digital-assets-portfolio"
version = "1.0.0"
description = "Professional cryptocurrency portfolio tracking and analytics system"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.0"
numpy = "^1.24.0"
dash = "^2.14.0"
plotly = "^5.17.0"
dash-bootstrap-components = "^1.5.0"
requests = "^2.31.0"
scipy = "^1.11.0"
python-dateutil = "^2.8.2"
openpyxl = "^3.1.0"
python-dotenv = "^1.0.0"
click = "^8.1.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
